infra/istio/virtualservice/virtualservice-movie.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: movie-service
  namespace: movie
spec:
  hosts:
  - movie-service.movie.svc.cluster.local
  http:
  - route:
    - destination:
        host: movie-service.movie.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 30s
      retryOn: "5xx,connect-failure,refused-stream,reset"
    timeout: 60s
